# fcb_emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  experimental.c  experimental.h  main.c  tables.c  tables.h  utils.c  utils.h
libfcb/: CMakeLists.txt
libfcb/inc/: fcb.h
libfcb/src/: fcb.c  utils.c  utils.h
libmembuf/: CMakeLists.txt  membuf.c  membuf.h
libnandemu/: CMakeLists.txt  nandemu.h  nandemu_api.c  nandemudef.h
libnandemu/inc/: nandemu.h  nandemudef.h
libnandemu/src/: block_state.c  block_state.h  nandemu.c  nandemu_api.c
